fix: Loading secondary Buttons
As secondary Buttons have a transparent background, the loading state
did not cover the text. This caused the text to shine through the
loading animation.

As a fix, the loading state will use the hover color from now on.
Usually the loading state happens right after clicking the Button. In
this situation, a hover effect already made the Button darker.

The stories have been adjusted to use a label on the Button to reflect
the real life.

--- a/components/web/button/button.scss
+++ b/components/web/button/button.scss
@@ -41,16 +41,10 @@
     cursor: default;
   }
 
+  &:hover,
   &.dbx-button--loading,
-  &.dbx-button--loading:hover,
   &.dbx-button--loading:active,
   &.dbx-button--loading:focus {
-    color: $text-color;
-    background-color: $bg-color;
-    border-color: $border-color;
-  }
-
-  &:hover {
     background-color: $bg-color--hover;
     color: $text-color--hover;
     border-color: $border-color--hover;
